--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,37 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <!-- NAVBAR -->
-	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
-		<div class="container">
-	
-			<div class="navbar-header">
-			
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-				<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-			
-				<a class="navbar-brand" href="#">MESS</a>
-			
-			</div>
-			
-			<div class="navbar-collapse collapse">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#about">ABOUT US</a></li>
-                    <li><a href="#messratings">MESS RATINGS</a></li>
-                    <li><a href="#complaint">COMPLAINT</a></li>
-                    <li><a href="#register">REGISTER</a></li>
-                    <li><a href="#contact">CONTACT US</a></li>
-				</ul>
-			</div>
-			
-		</div>
-	</div>
-	
-	<!-- END NAVBAR -->
+  <%= render 'layouts/navigation' %>
 	
 	
 
