--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -273,7 +273,7 @@
 						<p> REGISTER HERE</p>
 						
 						<ul class="list-inline">
-						<li><a href="register.html" class="btn btn-primary btn-md">REGISTER</a></li></ul>
+						<li><a href="register.html.erb" class="btn btn-primary btn-md">REGISTER</a></li></ul>
 						</br>
 						</br>
 						</br>
